--- a/receita-1/index.html
+++ b/receita-1/index.html
@@ -14,28 +14,36 @@
 
             table {
                 width: 100%;
-                border: 1px solid black;
-                border-radius: 10px;
+                border: none;
                 border-spacing: 0;
             }
 
             th, td {
                 text-align: center;
                 padding: 5px;
-                border: 0.5px solid black;
+                border-left: 1px solid black;
+                border-right: 1px solid black;
+            }
+
+            th {
+                border-top: 2px solid black;   
+                border-bottom: 2px solid black;
+            }
+
+            td {
+                border-bottom: 2px solid black;
             }
 
             th:first-child, td:first-child {
-                border-left: none;
+                border-left: 2px solid black;
             }
 
             th:last-child, td:last-child {
-                border-right: none;
+                border-right: 2px solid black;
             }
 
             table tr:first-child th:first-child {
                 border-top-left-radius: 10px;
-                
             }
 
             table tr:first-child th:last-child {
