feat - pass 4 and 5

--- a/receita-1/index.html
+++ b/receita-1/index.html
@@ -108,7 +108,7 @@
             <table class="table-1">
 
                 <caption>
-                    Preços do Boteco BSI 01
+                    <a href="https://github.com/RenanCDev">Preços do Boteco BSI 01</a>
                 </caption>
 
                 <thead>
@@ -209,7 +209,7 @@
             <table class="table-2">
 
                 <caption>
-                    Preços do Boteco BSI 02
+                    <a href="https://github.com/RenanCDev" target="_blank">Preços do Boteco BSI 02</a>
                 </caption>
 
                 <thead>
