--- a/receita-2/index.html
+++ b/receita-2/index.html
@@ -26,6 +26,7 @@
             Que as feridas deixadas pela idade<br/>
             Não se curam com pano de compressa
         </p>
+        
         <p class="mote">
             Vi a vida passando tão depressa<br>
             Que nem lembro que tive mocidade
@@ -33,8 +34,14 @@
 
         <br/>
 
-        <img src="https://akamai.sscdn.co/uploadfile/letras/playlists/3/a/b/9/3ab92363f7974d679f4194de9f389b5b.jpg" alt="img teste" width="200"/>
+        <div class="receita">
 
+            <img class="poeta" src="https://akamai.sscdn.co/uploadfile/letras/playlists/3/a/b/9/3ab92363f7974d679f4194de9f389b5b.jpg" alt="img teste" width="250"/>
+            <img class="nao-poeta" src="https://akamai.sscdn.co/uploadfile/letras/playlists/3/a/b/9/3ab92363f7974d679f4194de9f389b5b.jpg" alt="img teste" width="250"/>
+            <img class="poeta" src="https://akamai.sscdn.co/uploadfile/letras/playlists/3/a/b/9/3ab92363f7974d679f4194de9f389b5b.jpg" alt="img teste" width="250"/>
+
+        </div>
+        
         <p class="autor">
             <a href="https://www.google.com/search?q=poeta+joao+paraibano&sca_esv=11b9b55d5edba133&sca_upv=1&sxsrf=ADLYWILeQ9lpHKBOlJqsrmTEwyaTyjRkwg%3A1727203557387&ei=5QjzZuGiF5PJ1sQP5qa8oQ4&ved=0ahUKEwihqfjTntyIAxWTpJUCHWYTL-QQ4dUDCA8&uact=5&oq=poeta+joao+paraibano&gs_lp=Egxnd3Mtd2l6LXNlcnAiFHBvZXRhIGpvYW8gcGFyYWliYW5vMggQABiABBjLATIIEAAYgAQYogQyCBAAGIAEGKIEMggQABiABBiiBDIIEAAYgAQYogQyCBAAGIAEGKIESKUbUMIJWJkXcAF4AZABAJgBuQGgAYkIqgEDMC42uAEDyAEA-AEBmAIFoAKwBcICChAAGLADGNYEGEfCAgkQABiABBgTGA3CAggQABgTGAcYHsICCBAAGBMYDRgemAMAiAYBkAYGkgcDMS40oAe7Iw&sclient=gws-wiz-serp" target="_blank">
                 João Paraibano
