--- a/receita-2/index.html
+++ b/receita-2/index.html
@@ -13,7 +13,7 @@
         <meta name="viewport" content="width=device-width" />
 
         <title>
-            Receita 0e Programming Web
+            Receita 02 Programming Web
         </title>
 
         <p class="verso">
@@ -26,7 +26,7 @@
             Que as feridas deixadas pela idade<br/>
             Não se curam com pano de compressa
         </p>
-        
+
         <p class="mote">
             Vi a vida passando tão depressa<br>
             Que nem lembro que tive mocidade
@@ -48,6 +48,210 @@
             </a>
         </p>
 
+        <div class="table-container">
+
+            <table class="table-1">
+
+                <caption>
+                    <a href="https://github.com/RenanCDev">Preços do Boteco BSI 01</a>
+                </caption>
+
+                <thead>
+                    <tr>
+                        <th>
+                            NOME
+                        </th>
+                        <th>
+                            TIPO
+                        </th>
+                        <th>
+                            GRADUAÇÃO ALCOÓLICA (%)
+                        </th>
+                        <th>
+                            PREÇO
+                        </th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>
+                            Salinas
+                        </td>
+                        <td>
+                            Envelhecida
+                        </td>
+                        <td>
+                            42%
+                        </td>
+                        <td>
+                            65,00 R$
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Vale Verde
+                        </td>
+                        <td>
+                            Premium
+                        </td>
+                        <td>
+                            40%
+                        </td>
+                        <td>
+                            150,00 R$
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Seleta
+                        </td>
+                        <td>
+                            Prata
+                        </td>
+                        <td>
+                            45%
+                        </td>
+                        <td>
+                            45,00 R$
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Havana
+                        </td>
+                        <td>
+                            Envelhecida
+                        </td>
+                        <td>
+                            44%
+                        </td>
+                        <td>
+                            400,00 R$
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Praianinha
+                        </td>
+                        <td>
+                            Branca
+                        </td>
+                        <td>
+                            38%
+                        </td>
+                        <td>
+                            25,00 R$
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <table class="table-2">
+
+                <caption>
+                    <a href="https://github.com/RenanCDev" target="_blank">Preços do Boteco BSI 02</a>
+                </caption>
+
+                <thead>
+                    <tr>
+                        <th>
+                            NOME
+                        </th>
+                        <th>
+                            TIPO
+                        </th>
+                        <th>
+                            GRADUAÇÃO ALCOÓLICA (%)
+                        </th>
+                        <th>
+                            PREÇO
+                        </th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>
+                            Salinas
+                        </td>
+                        <td>
+                            Envelhecida
+                        </td>
+                        <td>
+                            42%
+                        </td>
+                        <td>
+                            65,00 R$
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Vale Verde
+                        </td>
+                        <td>
+                            Premium
+                        </td>
+                        <td>
+                            40%
+                        </td>
+                        <td>
+                            150,00 R$
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Seleta
+                        </td>
+                        <td>
+                            Prata
+                        </td>
+                        <td>
+                            45%
+                        </td>
+                        <td>
+                            45,00 R$
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Havana
+                        </td>
+                        <td>
+                            Envelhecida
+                        </td>
+                        <td>
+                            44%
+                        </td>
+                        <td>
+                            400,00 R$
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            Praianinha
+                        </td>
+                        <td>
+                            Branca
+                        </td>
+                        <td>
+                            38%
+                        </td>
+                        <td>
+                            25,00 R$
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
    </body>   
 
 </html>
