feat - end receita 2

--- a/receita-2/index.html
+++ b/receita-2/index.html
@@ -59,7 +59,7 @@
                 <thead>
                     <tr>
                         <th>
-                            NOME
+                            CACHAÇA
                         </th>
                         <th>
                             TIPO
@@ -76,7 +76,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            Salinas
+                            <a href="https://www.google.com/search?q=cacha%C3%A7a+salinas&sca_esv=a898764ffba7ce55&sca_upv=1&rlz=1C1ONGR_pt-PTBR1086BR1086&udm=2&biw=455&bih=389&sxsrf=ADLYWIJM2XJeCLkdAQ6S4AjtnHZ5zY-aOg%3A1727312448005&ei=P7L0Zu_-POff5OUP9pGzmQ0&ved=0ahUKEwivmoSntN-IAxXnL7kGHfbILNMQ4dUDCBE&uact=5&oq=cacha%C3%A7a+salinas&gs_lp=Egxnd3Mtd2l6LXNlcnAiEGNhY2hhw6dhIHNhbGluYXMyBRAAGIAEMgYQABgHGB4yBhAAGAcYHjIGEAAYBxgeMgYQABgHGB4yBhAAGAcYHjIGEAAYBxgeMgYQABgHGB4yBBAAGB4yBBAAGB5I-BhQtQhYrRdwAngAkAEAmAG-AaAB3guqAQMwLjm4AQPIAQD4AQGYAgWgAvQDmAMAiAYBkgcDMi4zoAefLQ&sclient=gws-wiz-serp" target="_blank">Salinas</a>
                         </td>
                         <td>
                             Envelhecida
@@ -91,7 +91,7 @@
 
                     <tr>
                         <td>
-                            Vale Verde
+                            <a href="https://www.google.com/search?q=cacha%C3%A7a+vale+verde&sca_esv=a898764ffba7ce55&sca_upv=1&rlz=1C1ONGR_pt-PTBR1086BR1086&udm=2&biw=455&bih=389&sxsrf=ADLYWIKaOw2uOapsQPq2TAeDf6iJcxcEXw%3A1727312453446&ei=RbL0ZoDoGsPd5OUP7uKwwAo&ved=0ahUKEwjAntCptN-IAxXDLrkGHW4xDKgQ4dUDCBE&uact=5&oq=cacha%C3%A7a+vale+verde&gs_lp=Egxnd3Mtd2l6LXNlcnAiE2NhY2hhw6dhIHZhbGUgdmVyZGUyBRAAGIAEMgQQABgeMgQQABgeMgQQABgeMgYQABgFGB4yBxAAGIAEGBhIgiRQlhRYlyNwAXgAkAEAmAGrAqAB7QyqAQUwLjguMbgBA8gBAPgBAZgCCqAChw3CAgYQABgIGB7CAgYQABgHGB6YAwCIBgGSBwcxLjguMC4xoAegKg&sclient=gws-wiz-serp" target="_blank">Vale Verde</a>
                         </td>
                         <td>
                             Premium
@@ -106,7 +106,7 @@
 
                     <tr>
                         <td>
-                            Seleta
+                            <a href="https://www.google.com/search?q=cacha%C3%A7a+seleta&sca_esv=a898764ffba7ce55&sca_upv=1&rlz=1C1ONGR_pt-PTBR1086BR1086&udm=2&biw=455&bih=389&sxsrf=ADLYWIKztLrr6-1--Jlg7_dNwILleomBwg%3A1727312678651&ei=JrP0ZqyTJ7eQ5OUPgf692Ao&ved=0ahUKEwisvoGVtd-IAxU3CLkGHQF_D6sQ4dUDCBE&uact=5&oq=cacha%C3%A7a+seleta&gs_lp=Egxnd3Mtd2l6LXNlcnAiD2NhY2hhw6dhIHNlbGV0YTIFEAAYgAQyBBAAGB4yBBAAGB4yBBAAGB4yBBAAGB4yBBAAGB4yBBAAGB4yBBAAGB4yBBAAGB4yBBAAGB5IqC5Q_xhYzi1wBXgAkAEAmAHSAaAB8gyqAQUwLjkuMbgBA8gBAPgBAZgCDKAC0QnCAgYQABgHGB7CAgcQABiABBgYwgIGEAAYBRgewgIEECMYJ5gDAIgGAZIHBTUuNi4xoAfqOQ&sclient=gws-wiz-serp" target="_blank">Seleta</a>
                         </td>
                         <td>
                             Prata
@@ -121,7 +121,7 @@
 
                     <tr>
                         <td>
-                            Havana
+                            <a href="https://www.google.com/search?q=cacha%C3%A7a+havana&sca_esv=a898764ffba7ce55&sca_upv=1&rlz=1C1ONGR_pt-PTBR1086BR1086&udm=2&biw=455&bih=389&sxsrf=ADLYWIIpLgZ1h1EzMuQrzMVY9y7VnjUMdA%3A1727312734311&ei=XrP0ZsTNEp_25OUP-vmy8Qw&ved=0ahUKEwjE9Mavtd-IAxUfO7kGHfq8LM4Q4dUDCBE&uact=5&oq=cacha%C3%A7a+havana&gs_lp=Egxnd3Mtd2l6LXNlcnAiD2NhY2hhw6dhIGhhdmFuYTIFEAAYgAQyBRAAGIAEMgUQABiABDIFEAAYgAQyBBAAGB4yBBAAGB4yBBAAGB4yBBAAGB4yBBAAGB4yBhAAGAUYHkjsC1CzBViRC3ACeACQAQCYAd8BoAH5BqoBBTAuNC4xuAEDyAEA-AEBmAIHoAKWB8ICBhAAGAcYHpgDAIgGAZIHBTIuNC4xoAfUGg&sclient=gws-wiz-serp" target="_blank">Havana</a>
                         </td>
                         <td>
                             Envelhecida
@@ -136,7 +136,7 @@
 
                     <tr>
                         <td>
-                            Praianinha
+                            <a href="https://www.google.com/search?q=cacha%C3%A7a+praianinha&sca_esv=a898764ffba7ce55&sca_upv=1&rlz=1C1ONGR_pt-PTBR1086BR1086&udm=2&biw=455&bih=389&sxsrf=ADLYWILG4pZKgCLkcph4nf9iMuRlqOhV4g%3A1727312767848&ei=f7P0Zr6zM5775OUPo9268Ao&ved=0ahUKEwj-7sW_td-IAxWePbkGHaOuDq4Q4dUDCBE&uact=5&oq=cacha%C3%A7a+praianinha&gs_lp=Egxnd3Mtd2l6LXNlcnAiE2NhY2hhw6dhIHByYWlhbmluaGEyBBAAGB4yBBAAGB4yBBAAGB5I8A9QnQVYtA5wAngAkAEAmAHiAaABug2qAQUwLjkuMbgBA8gBAPgBAZgCDKAC1Q3CAgUQABiABMICBhAAGAcYHsICBhAAGAgYHsICBxAAGIAEGBPCAggQABgTGAUYHsICCBAAGBMYCBgewgIGEAAYExgemAMAiAYBkgcFMi45LjGgB-Ue&sclient=gws-wiz-serp" target="_blank">Praianinha</a>
                         </td>
                         <td>
                             Branca
@@ -160,7 +160,7 @@
                 <thead>
                     <tr>
                         <th>
-                            NOME
+                            CACHAÇA
                         </th>
                         <th>
                             TIPO
@@ -177,7 +177,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            Salinas
+                            <a href="https://www.google.com/search?q=cacha%C3%A7a+salinas&sca_esv=a898764ffba7ce55&sca_upv=1&rlz=1C1ONGR_pt-PTBR1086BR1086&udm=2&biw=455&bih=389&sxsrf=ADLYWIJM2XJeCLkdAQ6S4AjtnHZ5zY-aOg%3A1727312448005&ei=P7L0Zu_-POff5OUP9pGzmQ0&ved=0ahUKEwivmoSntN-IAxXnL7kGHfbILNMQ4dUDCBE&uact=5&oq=cacha%C3%A7a+salinas&gs_lp=Egxnd3Mtd2l6LXNlcnAiEGNhY2hhw6dhIHNhbGluYXMyBRAAGIAEMgYQABgHGB4yBhAAGAcYHjIGEAAYBxgeMgYQABgHGB4yBhAAGAcYHjIGEAAYBxgeMgYQABgHGB4yBBAAGB4yBBAAGB5I-BhQtQhYrRdwAngAkAEAmAG-AaAB3guqAQMwLjm4AQPIAQD4AQGYAgWgAvQDmAMAiAYBkgcDMi4zoAefLQ&sclient=gws-wiz-serp" target="_blank">Salinas</a>
                         </td>
                         <td>
                             Envelhecida
@@ -192,7 +192,7 @@
 
                     <tr>
                         <td>
-                            Vale Verde
+                            <a href="https://www.google.com/search?q=cacha%C3%A7a+vale+verde&sca_esv=a898764ffba7ce55&sca_upv=1&rlz=1C1ONGR_pt-PTBR1086BR1086&udm=2&biw=455&bih=389&sxsrf=ADLYWIKaOw2uOapsQPq2TAeDf6iJcxcEXw%3A1727312453446&ei=RbL0ZoDoGsPd5OUP7uKwwAo&ved=0ahUKEwjAntCptN-IAxXDLrkGHW4xDKgQ4dUDCBE&uact=5&oq=cacha%C3%A7a+vale+verde&gs_lp=Egxnd3Mtd2l6LXNlcnAiE2NhY2hhw6dhIHZhbGUgdmVyZGUyBRAAGIAEMgQQABgeMgQQABgeMgQQABgeMgYQABgFGB4yBxAAGIAEGBhIgiRQlhRYlyNwAXgAkAEAmAGrAqAB7QyqAQUwLjguMbgBA8gBAPgBAZgCCqAChw3CAgYQABgIGB7CAgYQABgHGB6YAwCIBgGSBwcxLjguMC4xoAegKg&sclient=gws-wiz-serp" target="_blank">Vale Verde</a>
                         </td>
                         <td>
                             Premium
@@ -207,7 +207,7 @@
 
                     <tr>
                         <td>
-                            Seleta
+                            <a href="https://www.google.com/search?q=cacha%C3%A7a+seleta&sca_esv=a898764ffba7ce55&sca_upv=1&rlz=1C1ONGR_pt-PTBR1086BR1086&udm=2&biw=455&bih=389&sxsrf=ADLYWIKztLrr6-1--Jlg7_dNwILleomBwg%3A1727312678651&ei=JrP0ZqyTJ7eQ5OUPgf692Ao&ved=0ahUKEwisvoGVtd-IAxU3CLkGHQF_D6sQ4dUDCBE&uact=5&oq=cacha%C3%A7a+seleta&gs_lp=Egxnd3Mtd2l6LXNlcnAiD2NhY2hhw6dhIHNlbGV0YTIFEAAYgAQyBBAAGB4yBBAAGB4yBBAAGB4yBBAAGB4yBBAAGB4yBBAAGB4yBBAAGB4yBBAAGB4yBBAAGB5IqC5Q_xhYzi1wBXgAkAEAmAHSAaAB8gyqAQUwLjkuMbgBA8gBAPgBAZgCDKAC0QnCAgYQABgHGB7CAgcQABiABBgYwgIGEAAYBRgewgIEECMYJ5gDAIgGAZIHBTUuNi4xoAfqOQ&sclient=gws-wiz-serp" target="_blank">Seleta</a>
                         </td>
                         <td>
                             Prata
@@ -222,7 +222,7 @@
 
                     <tr>
                         <td>
-                            Havana
+                            <a href="https://www.google.com/search?q=cacha%C3%A7a+havana&sca_esv=a898764ffba7ce55&sca_upv=1&rlz=1C1ONGR_pt-PTBR1086BR1086&udm=2&biw=455&bih=389&sxsrf=ADLYWIIpLgZ1h1EzMuQrzMVY9y7VnjUMdA%3A1727312734311&ei=XrP0ZsTNEp_25OUP-vmy8Qw&ved=0ahUKEwjE9Mavtd-IAxUfO7kGHfq8LM4Q4dUDCBE&uact=5&oq=cacha%C3%A7a+havana&gs_lp=Egxnd3Mtd2l6LXNlcnAiD2NhY2hhw6dhIGhhdmFuYTIFEAAYgAQyBRAAGIAEMgUQABiABDIFEAAYgAQyBBAAGB4yBBAAGB4yBBAAGB4yBBAAGB4yBBAAGB4yBhAAGAUYHkjsC1CzBViRC3ACeACQAQCYAd8BoAH5BqoBBTAuNC4xuAEDyAEA-AEBmAIHoAKWB8ICBhAAGAcYHpgDAIgGAZIHBTIuNC4xoAfUGg&sclient=gws-wiz-serp" target="_blank">Havana</a>
                         </td>
                         <td>
                             Envelhecida
@@ -237,7 +237,7 @@
 
                     <tr>
                         <td>
-                            Praianinha
+                            <a href="https://www.google.com/search?q=cacha%C3%A7a+praianinha&sca_esv=a898764ffba7ce55&sca_upv=1&rlz=1C1ONGR_pt-PTBR1086BR1086&udm=2&biw=455&bih=389&sxsrf=ADLYWILG4pZKgCLkcph4nf9iMuRlqOhV4g%3A1727312767848&ei=f7P0Zr6zM5775OUPo9268Ao&ved=0ahUKEwj-7sW_td-IAxWePbkGHaOuDq4Q4dUDCBE&uact=5&oq=cacha%C3%A7a+praianinha&gs_lp=Egxnd3Mtd2l6LXNlcnAiE2NhY2hhw6dhIHByYWlhbmluaGEyBBAAGB4yBBAAGB4yBBAAGB5I8A9QnQVYtA5wAngAkAEAmAHiAaABug2qAQUwLjkuMbgBA8gBAPgBAZgCDKAC1Q3CAgUQABiABMICBhAAGAcYHsICBhAAGAgYHsICBxAAGIAEGBPCAggQABgTGAUYHsICCBAAGBMYCBgewgIGEAAYExgemAMAiAYBkgcFMi45LjGgB-Ue&sclient=gws-wiz-serp" target="_blank">Praianinha
                         </td>
                         <td>
                             Branca
