--- a/receita-3/index.html
+++ b/receita-3/index.html
@@ -19,78 +19,41 @@
             Receita 03 Programming Web
         </title>
 
-        <div id="test-01">
-            <button id="carregar-cervejas-01">
+        <div id="button">
+            <button id="beer">
                 <h1>
-                    Carregando Cervejas...
+                    Press to load beer
                 </h1>
             </button>
         </div>
 
-        <div id="test-02">
-            <button id="descarregar-cervejas-02">
-                <h1>
-                    Guinness
-                </h1>
-            </button>
+        <div id="beers">
+            <h1>
+                BEERS
+            </h1>
+            <h4 id="list-beers"></h4>
         </div>
 
    </body>   
 
    <script>
-function carregarDiv01() {
-        let div = document.getElementById("test-01");
-        div.innerHTML = `<button id="descarregar-cervejas-01">
-            <h1>
-                Guinness
-            </h1>
-        </button>`;
 
-        let botaoDescarregar01 = document.getElementById("descarregar-cervejas-01");
-        botaoDescarregar01.onmouseout = descarregarDiv01;
-    }
+        function loadBeers() {
+            let div = document.getElementById("list-beers");
 
-    function descarregarDiv01() {
-        let div = document.getElementById("test-01");
-        div.innerHTML = `<button id="carregar-cervejas-01">
-            <h1>
-                Carregando Cervejas...
-            </h1>
-        </button>`;
+            if (div.innerHTML.trim() ==="") {
+                div.innerHTML = `
+                <h2>Guinness</h2>
+                <h2>Heineken</h2>
+                <h2>Corona</h2>
+            `;
+            } else {
+                div.innerHTML = "";
+            }
+        }
 
-        let botaoCarregar01 = document.getElementById("carregar-cervejas-01");
-        botaoCarregar01.onmouseenter = carregarDiv01;
-    }
+        document.getElementById("beer").onclick = loadBeers;
 
-    function descarregarDiv02() {
-        let div = document.getElementById("test-02");
-        div.innerHTML = `<button id="carregar-cervejas-02">
-            <h1>
-                Carregando Cervejas...
-            </h1>
-        </button>`;
-
-        let botaoCarregar02 = document.getElementById("carregar-cervejas-02");
-        botaoCarregar02.onmouseout = carregarDiv02;
-    }
-
-    function carregarDiv02() {
-        let div = document.getElementById("test-02");
-        div.innerHTML = `<button id="descarregar-cervejas-02">
-            <h1>
-                Guinness
-            </h1>
-        </button>`;
-
-        let botaoDescarregar02 = document.getElementById("descarregar-cervejas-02");
-        botaoDescarregar02.onmouseenter = descarregarDiv02;
-    }
-
-    let botao01 = document.getElementById("carregar-cervejas-01");
-    botao01.onmouseenter = carregarDiv01;
-
-    let botao02 = document.getElementById("descarregar-cervejas-02");
-    botao02.onmouseenter = descarregarDiv02;
     </script>
 
 </html>
