--- a/receita-4/index.html
+++ b/receita-4/index.html
@@ -34,7 +34,7 @@
         let beers = ["Bramah", "Becks", "Spaten", "Skol"]
 
         function transformation(item) {
-            return `<h1>${item}</h1>`
+            return `<div>${item}</div>`
         }
 
         function loadDiv() {
