--- a/receita-6/index.html
+++ b/receita-6/index.html
@@ -1,18 +1,88 @@
 <!DOCTYPE html>
-
-
 <html lang="pt-BR">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
-        <link href="styles/style-index.css" rel="stylesheet">
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link href="styles/style-index.css" rel="stylesheet">
+</head>
+<body>
+    <title>
+        Receita 06 Programming Web
+    </title>
 
-    <body>
-        <title>
-            Receita 06 Programming Web
-        </title>
-        <div id="test">
-        </div>
-   </body>   
+    <div id="test">
+        <button id="loadButton">
+            <h1>Load Beers</h1>
+        </button>
+        <button id="sortBeer">
+            <h1>Sort Beers</h1>
+        </button>
+        <button id="shuffleBeers">
+            <h1>Shuffle Beers</h1>
+        </button>
+    </div>
+    <div id="printBeers">
+    </div>
+
+</body>   
+
+<script>
+    let beers = [
+        { "name": "Brahma", "alcoholContent": "4.8 %"},
+        { "name": "Skol", "alcoholContent": "4.7 %"},
+        { "name": "Antarctica", "alcoholContent": "4.9 %"},
+        { "name": "Bohemia", "alcoholContent": "5.0 %"},
+        { "name": "Budweiser", "alcoholContent": "5.0 %"},
+        { "name": "Stella Artois", "alcoholContent": "5.2 %"},
+        { "name": "Becks", "alcoholContent": "5.0 %"},
+        { "name": "Corona", "alcoholContent": "4.5 %"},
+        { "name": "Patagonia", "alcoholContent": "5.4 %"},
+        { "name": "Serramalte", "alcoholContent": "5.5 %"},
+        { "name": "Colorado", "alcoholContent": "5.2 %"},
+        { "name": "Leffe", "alcoholContent": "6.6 %"},
+        { "name": "Hoegaarden", "alcoholContent": "4.9 %"},
+        { "name": "Cervejaria Wäls", "alcoholContent": "5.6 %"},
+        { "name": "Michelob Ultra", "alcoholContent": "4.2 %"},
+        { "name": "Quilmes", "alcoholContent": "4.9 %"}
+    ];
+
+
+
+    const loadDiv = () => {
+        const div = document.getElementById("printBeers");
+        const button = document.getElementById("loadButton");
+
+        if (div.innerHTML.trim() === "") {
+            renderBeers(beers);
+            button.querySelector("h1").textContent = "Unload Beers";
+        } else {
+            document.querySelectorAll(".fade").forEach(el => el.classList.remove("show"));
+            setTimeout(() => div.innerHTML = "", 300);
+            button.querySelector("h1").textContent = "Load Beers";
+        }
+    }
+
+    const renderBeers = (list) => {
+        const div = document.getElementById("printBeers");
+        const beersHtml = list.map(({name,alcoholContent}) => `<div id="beers" class="beers fade">${name} ${alcoholContent}</div>`);
+        div.innerHTML = beersHtml.join("\n");
+        document.querySelectorAll(".fade").forEach(el => {
+            setTimeout(() => el.classList.add("show"), 10);
+        });
+    }
+
+    const sortBeers = () => {
+        beers = beers.sort((a, b) => a.name.localeCompare(b.name));
+        renderBeers(beers);
+    }
+
+    const shuffleBeers = () => {
+        beers = beers.sort(() => Math.random() - 0.5); 
+        renderBeers(beers);  
+    }
+
+    document.getElementById("loadButton").addEventListener("click", loadDiv);
+    document.getElementById("sortBeer").addEventListener("click", sortBeers);
+    document.getElementById("shuffleBeers").addEventListener("click", shuffleBeers);
+</script>
 </html>
