--- a/receita-5/index.html
+++ b/receita-5/index.html
@@ -33,7 +33,7 @@
         "Hoegaarden", "Cervejaria Wäls", "Michelob Ultra", "Quilmes"
     ];
 
-    const loadDiv = () => {
+    const loadDiv = beer => {
         const div = document.getElementById("printBeers");
         const button = document.getElementById("loadButton");
 
